--- a/tsconfig.json
+++ b/tsconfig.json
@@ -110,5 +110,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src", "tests"]
+  "include": ["archive/base-tobe-tests/src", "archive/base-tobe-tests/tests"]
 }
