--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "financial-tracker",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The **Financial Tracker** is a simple Learning Project for TDD with Node.",
   "main": "server.ts",
   "scripts": {
+    "start:dev": "nodemon --exec ts-node server.ts",
+    "start": "ts-node server.ts",
     "test": "jest"
   },
   "repository": {
@@ -27,9 +29,21 @@
   },
   "homepage": "https://github.com/gaju91/financial-tracker#readme",
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.14",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.6",
+    "mongodb-memory-server": "^10.1.4",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.13.0"
   }
 }
